# mcp-seo

./: .coverage  .env  .env.example  .gitignore  AGENT_SQUAD_HANDOFF.md  CONTENT_EXTRACTION_SUMMARY.md  ENHANCED_FUNCTIONALITY_REPORT.md  INSTALLATION.md  NETWORKX_ANALYSIS.md  PAGERANK_INTEGRATION.md  PERFORMANCE_TESTING_SUMMARY.md  PYTEST_IMPLEMENTATION.md  README.md  debug_keyword_api.py  debug_serp.py  pyproject.toml  pytest.ini  test_analyzer_standalone.py  test_config.json  test_content_analyzer.py  test_keyword_analyzer_pytest.py  test_keyword_difficulty.py  test_live_apis.py
docs/: IMPORT_LINTER_GUIDE.md  PERFORMANCE_TESTING.md
docs/architecture/: ADR-001-Domain-Driven-Architecture.md  ADR-002-Dependency-Injection-Strategy.md  ADR-003-Testing-Architecture.md  Dependency-Flow-Diagram.md  Implementation-Roadmap.md  Integration-Patterns.md  Module-Structure.md  Performance-Considerations.md  Production-Architecture-Summary.md
examples/: content_analysis_example.py  example_usage.py
legacy/: README.md
legacy/kuzu-pagerank-analyzer/: PROJECT_SUMMARY.md  README.md  USAGE.md  analyze.sh  internal_linking_analyzer.py  pagerank_analyzer.py  pyproject.toml  run_analysis.py  run_seo_analysis.py  seo_analyzer.py  simple_test.py  test_pagerank_simple.py
legacy/kuzu-pagerank-analyzer/bash-test/: seo_analysis.json
legacy/kuzu-pagerank-analyzer/final-results/: link_opportunities.csv  pillar_pages.csv  seo_analysis.json  sitemap_audit_results.json
legacy/kuzu-pagerank-analyzer/src/kuzu_pagerank_analyzer/: __init__.py  main.py
scripts/: run_performance_tests.py
src/mcp_seo/: __init__.py  server.py
src/mcp_seo/analysis/: __init__.py  competitor_analyzer.py  recommendation_engine.py
src/mcp_seo/config/: __init__.py  settings.py
src/mcp_seo/content/: __init__.py  blog_analyzer.py  link_optimizer.py  markdown_parser.py
src/mcp_seo/content_analysis/: __init__.py  blog_optimizer.py
src/mcp_seo/dataforseo/: __init__.py  client.py
src/mcp_seo/engines/: __init__.py  recommendation_engine.py
src/mcp_seo/graph/: __init__.py  kuzu_manager.py  link_graph_builder.py  networkx_analyzer.py  pagerank_analyzer.py
src/mcp_seo/models/: __init__.py  seo_models.py
src/mcp_seo/reporting/: __init__.py  seo_reporter.py
src/mcp_seo/tools/: __init__.py  competitor_analyzer.py  content_analyzer.py  keyword_analyzer.py  keyword_analyzer_enhanced.py  keyword_analyzer_original.py  onpage_analyzer.py  onpage_analyzer_enhanced.py
src/mcp_seo/tools/graph/: __init__.py  networkx_tools.py  pagerank_tools.py  pagerank_tools_enhanced.py
src/mcp_seo/utils/: __init__.py  rich_reporter.py
src/mcp_seo/visualization/: __init__.py  network_visualizer.py
tests/: conftest.py  performance_config.py  test_analyzer_integration.py  test_config.py  test_content_analysis.py  test_content_analyzer.py  test_content_extraction.py  test_database_performance.py  test_dataforseo_client.py  test_enhanced_analyzers.py  test_enhanced_functionality.py  test_json_parameter_validation.py  test_live_api_integration.py  test_networkx_fixes.py  test_networkx_tools.py  test_pagerank_mcp_parameter_fix.py  test_performance.py  test_rich_reporting.py  test_seo_models.py  test_server.py
tests/integration/: test_mcp_tools_simple.py  test_pagerank_tools.py
tests/unit/: test_kuzu_manager.py  test_link_graph_builder.py  test_pagerank_analyzer.py
