[project]
name = "mcp-data4seo"
version = "1.0.0"
description = "FastMCP server for comprehensive SEO analysis using DataForSEO API"
readme = "README.md"
authors = [
    { name = "Thomas PEDOT", email = "thomas.pedot@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "dataforseo-client>=2.0.0",
    "kuzu>=0.5.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "numpy>=1.24.0",
    "lxml>=4.9.0"
]

[project.scripts]
mcp-data4seo = "mcp_seo.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_seo"]
