[project]
name = "kuzu-pagerank-analyzer"
version = "0.1.0"
description = "Comprehensive SEO PageRank analysis tool using Kùzu graph database for GitAlchemy blog content"
readme = "README.md"
authors = [
    { name = "GitAlchemy Team", email = "thomas.pedot@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "click>=8.2.1",
    "kuzu>=0.11.2",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "polars>=1.33.0",
    "pyarrow>=21.0.0",
    "python-frontmatter>=1.1.0",
    "rich>=14.1.0",
    "scipy>=1.16.1",
]

[project.scripts]
kuzu-pagerank-analyzer = "kuzu_pagerank_analyzer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
